--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,12 @@
 FROM node:20-slim
+
 WORKDIR /app/frontend
-COPY package.json package-lock.json ./
+
+# Copy package.json and package-lock.json from the build context's frontend/ directory
+COPY frontend/package.json frontend/package-lock.json ./
 RUN npm install
-COPY . .
+
+# Copy the rest of the frontend code from the build context's frontend/ directory
+COPY frontend/ .
+
 RUN npm run build
